Ispravljena imena fajlova

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
-Blockchain Lazic Nikic Neskovic Sekesan.aux
-Blockchain Lazic Nikic Neskovic Sekesan.bbl
-Blockchain Lazic Nikic Neskovic Sekesan.blg
-Blockchain Lazic Nikic Neskovic Sekesan.fdb_latexmk
-Blockchain Lazic Nikic Neskovic Sekesan.fls
-Blockchain Lazic Nikic Neskovic Sekesan.log
-Blockchain Lazic Nikic Neskovic Sekesan.out
-Blockchain Lazic Nikic Neskovic Sekesan.synctex.gz
-Blockchain Lazic Nikic Neskovic Sekesan.toc
+14_LazicNikicNeskovicSekesan.aux
+14_LazicNikicNeskovicSekesan.bbl
+14_LazicNikicNeskovicSekesan.blg
+14_LazicNikicNeskovicSekesan.fdb_latexmk
+14_LazicNikicNeskovicSekesan.fls
+14_LazicNikicNeskovicSekesan.log
+14_LazicNikicNeskovicSekesan.out
+14_LazicNikicNeskovicSekesan.synctex.gz
+14_LazicNikicNeskovicSekesan.toc
