--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,4 @@
-14_LazicNikicNeskovicSekesan.aux
-14_LazicNikicNeskovicSekesan.bbl
-14_LazicNikicNeskovicSekesan.blg
-14_LazicNikicNeskovicSekesan.fdb_latexmk
-14_LazicNikicNeskovicSekesan.fls
-14_LazicNikicNeskovicSekesan.log
-14_LazicNikicNeskovicSekesan.out
-14_LazicNikicNeskovicSekesan.synctex.gz
-14_LazicNikicNeskovicSekesan.toc
+*
+!*.pdf
+!*.bib
+!*.tex
